--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -712,6 +712,20 @@
       </div>
     </footer>
     <!-- Footer End -->
+    <a
+      href="#home"
+      class="rounded-full h-12 w-12 fixed bg-primary z-[9999] bottom-6 right-6 text-white hover:bg-teal-600 hover:animate-pulse hidden"
+      id="to-top"
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        id="upper-arrow"
+        class="fill-current"
+      >
+        <path
+          d="M17,13.41,12.71,9.17a1,1,0,0,0-1.42,0L7.05,13.41a1,1,0,0,0,0,1.42,1,1,0,0,0,1.41,0L12,11.29l3.54,3.54a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29A1,1,0,0,0,17,13.41Z"
+        ></path></svg
+    ></a>
     <script src="dist/script.js"></script>
   </body>
 </html>
