--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </header>
     <!-- Header End -->
     <!-- Hero Section Start -->
-    <section id="home" class="pt-36">
+    <section id="home" class="pt-20">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="self-center w-full px-4 lg:w-1/2">
@@ -116,28 +116,28 @@
             >
           </div>
           <div class="self-end w-full px-4 lg:w-1/2">
-            <div class="relative mt-8 lg:mt-0">
+            <div class="relative mt-10 lg:right-0 lg:mt-9">
               <img
                 src="img/Ridha_SNBP-removebg-preview.png"
                 alt="Muhammad Ridha"
-                class="max-w-full mx-auto"
-                width="350"
-                height="350"
+                class="relative z-10 max-w-full mx-auto scale-90"
               />
               <span
-                class="absolute -translate-x-40 -bottom-14 -z-10 left-1/2 md:scale-125 md:-translate-y-14"
-                ><svg
+                class="absolute bottom-0 -translate-x-1/2 left-1/2 md:scale-125"
+              >
+                <svg
                   width="400"
                   height="400"
                   viewBox="0 0 200 200"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
-                    fill="#14B8A6"
-                    d="M41.5,-18.5C46.6,2.4,38.8,22.5,21,37.5C3.3,52.4,-24.4,62.1,-41.5,51.1C-58.5,40.1,-64.9,8.5,-56.2,-17.3C-47.5,-43,-23.7,-62.9,-2.8,-62C18.1,-61.1,36.3,-39.4,41.5,-18.5Z"
-                    transform="translate(100 100) scale(1.3)"
-                  /></svg
-              ></span>
+                    fill="#14b8a6"
+                    d="M47.4,-51C59.2,-35.6,65.1,-17.8,63.4,-1.7C61.7,14.5,52.6,28.9,40.8,36.6C28.9,44.2,14.5,45,-2,47C-18.4,49,-36.8,52.1,-45.4,44.5C-53.9,36.8,-52.5,18.4,-51.2,1.3C-49.9,-15.8,-48.7,-31.7,-40.2,-47.1C-31.7,-62.4,-15.8,-77.3,1,-78.3C17.8,-79.2,35.6,-66.3,47.4,-51Z"
+                    transform="translate(100 100) scale(1.1)"
+                  />
+                </svg>
+              </span>
             </div>
           </div>
         </div>
@@ -358,23 +358,23 @@
           <div class="flex flex-wrap items-center justify-center">
             <a
               href=""
-              class="max-w-[120px] mx-4 py-4 grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
-              ><img src="img/clients/Netflix_2015_logo.svg" alt="Netflix"
+              class="max-w-[120px] mx-4 py-4 lg:grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
+              ><img src="img/svg/Netflix_2015_logo.svg" alt="Netflix"
             /></a>
             <a
               href=""
-              class="max-w-[120px] lg:max-w-[320px] mx-4 py-4 grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
-              ><img src="img/clients/FCX_BIG.svg" alt="Freeport"
+              class="max-w-[180px] lg:max-w-[320px] mx-4 py-4 lg:grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
+              ><img src="img/svg/FCX_BIG.svg" alt="Freeport"
             /></a>
             <a
               href=""
-              class="max-w-[120px] lg:max-w-[190px] mx-4 py-4 grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
-              ><img src="img/clients/SpaceX-Logo.svg" alt="SpaceX"
+              class="max-w-[120px] lg:max-w-[190px] mx-4 py-4 lg:grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
+              ><img src="img/svg/SpaceX-Logo.svg" alt="SpaceX"
             /></a>
             <a
               href=""
-              class="max-w-[120px] mx-4 py-4 grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
-              ><img src="img/clients/Tokopedia.svg" alt="Tokopedia"
+              class="max-w-[120px] mx-4 py-4 lg:grayscale opacity-80 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8"
+              ><img src="img/svg/Tokopedia.svg" alt="Tokopedia"
             /></a>
           </div>
         </div>
@@ -712,6 +712,7 @@
       </div>
     </footer>
     <!-- Footer End -->
+    <!-- arrow to top -->
     <a
       href="#home"
       class="rounded-full h-12 w-12 fixed bg-primary z-[9999] bottom-6 right-6 text-white hover:bg-teal-600 hover:animate-pulse hidden"
@@ -726,6 +727,7 @@
           d="M17,13.41,12.71,9.17a1,1,0,0,0-1.42,0L7.05,13.41a1,1,0,0,0,0,1.42,1,1,0,0,0,1.41,0L12,11.29l3.54,3.54a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29A1,1,0,0,0,17,13.41Z"
         ></path></svg
     ></a>
+    <!-- arrow to top End -->
     <script src="dist/script.js"></script>
   </body>
 </html>
