--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </header>
     <!-- Header End -->
     <!-- Hero Section Start -->
-    <section id="home" class="pt-20">
+    <section id="home" class="pt-28 lg:pt-16">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="self-center w-full px-4 lg:w-1/2">
