--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                   height="400"
                   viewBox="0 0 200 200"
                   xmlns="http://www.w3.org/2000/svg"
+                  class="w-full"
                 >
                   <path
                     fill="#14b8a6"
