--- a/index.html
+++ b/index.html
@@ -436,94 +436,94 @@
             </p>
           </div>
           <div class="flex flex-wrap">
-            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+            <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
               <div
-                class="relative overflow-hidden transition-all duration-500 bg-blue-500 rounded-lg w-96 h-[30rem] group grid-card aspect-[6/8] hover:scale-95 shadow-xl dark:hover:shadow-primary"
+                class="mb-10 overflow-hidden transition bg-white shadow-lg rounded-xl dark:bg-slate-600 dark:hover:shadow-teal-400 hover:scale-95"
               >
-                <!-- Image Container -->
-                <div
-                  class="w-full h-full absolute group-hover:scale-125 bg-[url('/img/programming.jpg')] transition-all duration-500 top-0"
-                ></div>
-
-                <!-- Card Content -->
-                <div
-                  class="absolute bottom-0 px-5 py-5 bg-white pb-9 dark:bg-slate-600"
-                >
-                  <a
-                    href="#"
-                    class="block mb-3 text-xl font-bold truncate text-dark hover:text-primary dark:group-hover:text-primary dark:text-white"
+                <img
+                  src="https://source.unsplash.com/360x200?programming"
+                  alt="Programming"
+                  class="w-full"
+                />
+                <div class="px-6 py-8">
+                  <h3>
+                    <a
+                      href="#"
+                      class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary dark:text-white"
+                      >Tips Belajar Programming</a
+                    >
+                  </h3>
+                  <p
+                    class="mb-6 text-base font-medium text-secondary dark:text-slate-200"
                   >
-                    <h3>Web Development</h3>
-                  </a>
-                  <p class="text-black">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Officia consectetur vel.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Placeat officia beatae quisquam?
                   </p>
                   <a
-                    href=""
-                    class="inline-block px-5 py-2 mt-5 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80 dark:bg-teal-600"
+                    href="#"
+                    class="px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80"
                     >Baca Selengkapnya</a
                   >
                 </div>
               </div>
             </div>
-            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+            <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
               <div
-                class="relative overflow-hidden transition-all duration-500 bg-blue-500 rounded-lg w-96 h-[30rem] group grid-card aspect-[6/8] hover:scale-95 shadow-xl dark:hover:shadow-primary"
+                class="mb-10 overflow-hidden transition bg-white shadow-lg rounded-xl dark:bg-slate-600 dark:hover:shadow-teal-400 hover:scale-95"
               >
-                <!-- Image Container -->
-                <div
-                  class="w-full h-full absolute group-hover:scale-125 bg-[url('/img/fundamental.jpg')] transition-all duration-500 top-0"
-                ></div>
-
-                <!-- Card Content -->
-                <div
-                  class="absolute bottom-0 px-5 py-5 mt-10 bg-white dark:bg-slate-600 pb-9"
-                >
-                  <a
-                    href="#"
-                    class="block mb-3 text-xl font-bold truncate text-dark hover:text-primary dark:group-hover:text-primary dark:text-white"
+                <img
+                  src="https://source.unsplash.com/360x200?mechanical+keyboard"
+                  alt="Mechanical Keyboard"
+                  class="w-full"
+                />
+                <div class="px-6 py-8">
+                  <h3>
+                    <a
+                      href="#"
+                      class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary dark:text-white"
+                      >Review Keyboard GMMK Pro</a
+                    >
+                  </h3>
+                  <p
+                    class="mb-6 text-base font-medium text-secondary dark:text-slate-200"
                   >
-                    <h3>Web Fundamental</h3>
-                  </a>
-                  <p class="text-black">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Officia consectetur vel.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Modi facilis illum in.
                   </p>
                   <a
-                    href=""
-                    class="inline-block px-5 py-2 mt-5 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80 dark:bg-teal-600"
+                    href="#"
+                    class="px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80"
                     >Baca Selengkapnya</a
                   >
                 </div>
               </div>
             </div>
-            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+            <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
               <div
-                class="relative overflow-hidden transition-all duration-500 bg-blue-500 rounded-lg w-96 h-[30rem] group grid-card aspect-[6/8] hover:scale-95 shadow-xl dark:hover:shadow-primary"
+                class="mb-10 overflow-hidden transition duration-500 ease-in-out bg-white shadow-lg rounded-xl dark:bg-slate-600 dark:hover:shadow-teal-400 hover:scale-95"
               >
-                <!-- Image Container -->
-                <div
-                  class="w-full h-full absolute group-hover:scale-125 bg-[url('/img/AI.jpg')] transition-all duration-500 top-0"
-                ></div>
-
-                <!-- Card Content -->
-                <div
-                  class="absolute bottom-0 px-5 py-5 mt-10 bg-white pb-9 dark:bg-slate-600"
-                >
-                  <a
-                    href="#"
-                    class="block mb-3 text-xl font-bold truncate text-dark hover:text-primary dark:group-hover:text-primary dark:text-white"
+                <img
+                  src="https://source.unsplash.com/360x200?coffee"
+                  alt="Coffee"
+                  class="w-full"
+                />
+                <div class="px-6 py-8">
+                  <h3>
+                    <a
+                      href="#"
+                      class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary dark:text-white"
+                      >Menikmati Secangkir Kopi</a
+                    >
+                  </h3>
+                  <p
+                    class="mb-6 text-base font-medium text-secondary dark:text-slate-200"
                   >
-                    <h3>Ai Intelligent</h3>
-                  </a>
-                  <p class="text-black">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Officia consectetur vel.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Impedit, totam ipsum ea quam sequi velit sunt.
                   </p>
                   <a
-                    href=""
-                    class="inline-block px-5 py-2 mt-5 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80 dark:bg-teal-600"
+                    href="#"
+                    class="px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80"
                     >Baca Selengkapnya</a
                   >
                 </div>
