update dark mod + perbaikan fitur

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./dist/output.css" />
     <script src="https://unpkg.com/feather-icons"></script>
     <title>Portofolio Tailwind</title>
+    <script>
+      if (
+        localStorage.theme === "dark" ||
+        (!("theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
   </head>
   <body>
     <!-- Header Start -->
